--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,196 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-// VARIABLES
-$c_blanco: #fff;
-$c_negro: #202020;
-$c_rojo: #910000;
-$sombra: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+// SCSS UTILIDADES
+@import './utilities/reset';
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  /* BARRA DE NAVEGACION */
-  .navbar{
-    background-color: rgb(227, 0, 0) !important;
-    border-style: none;
-  }
-  
-  .cont-img-logo-nav{
-    display: flex;
-    align-items: center;
-    // border: solid 2px;
-    height: 60px;
-    margin-left: 6rem;
-  }
-  
-  .logo-bocata{
-    width: 100px;
-  }
-  
-  .navbar-brand{
-    margin-left: 40px;
-  }
-  
-  .nav-link{
-    font-size: 20px;
-    color: #ffffff;
-    margin-right: 32px;
-  }
-  
-  .navbar-expand-lg .navbar-collapse{
-    flex-direction: row-reverse;
-    margin-right: 32px;
-  }
-
-
-// MAIN
-
-main{
-display: flex;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap-reverse;
-
-  h1{
-    font-family: "Poppins" sans-serif;
-    font-weight: 700;
-    text-align: start;
-    font-size: 5.4rem;
-  }
-
-  img{
-    width: 490px;
-    height: 532px;
-  }
-}
-
-.cont-texto{
-  margin-top: 20px;
-  margin-left: 120px;
-  padding: 32px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  width: 800px;
-  height: 600px;
-
-  .boton {
-    font-family: "Poppins" sans-serif;
-    font-weight: 500;
-    width: 150px;
-    font-size: 1.3rem;
-    background-color: $c_negro;
-    color: $c_blanco;
-    border-radius: 6px;
-    padding: 6px 13px;
-    border-style: none;
-    transition: 0.3s ease-in-out;
-  
-    &:hover {
-      background-color: $c_rojo;
-      color: $c_blanco;
-    }
-  }
-}
- 
-  /* INICIO-CARROUSEL */
-  .cont-cont-carrousel{
-    padding: 40px;
-    // background-color: rgb(189, 0, 0);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .cont-carrousel{
-    width: 1000px;
-    height: auto;
-  }
-  
-  /* ERROR 404 */
-  .cont-404{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .cont-404 h1{
-    font-size: 80px;
-  }
-  
-  /* FOOTER */
-  /* INICIO FOOTER */
-  .cont-footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #c1000a;
-    color: #fff;
-    padding: 40px 0;
-    text-align: center;
-    flex-wrap: wrap;
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .footer-item2{
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .h1-footer{
-    font-family: "League Spartan", sans-serif;
-    font-weight: bold;
-    font-size: 26px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-  }
-  
-  .icon-foot-text {
-    font-family: "League Spartan", sans-serif;
-    font-size: 17px;
-    margin-top: 10px;
-    text-align: start;
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .icons-footer{
-    width: 22px;
-    height: auto;
-    margin-right: 5px;
-    vertical-align: middle; /*por lo visto centra el icono con el texto*/
-  }
-  
-  .footer-item3{
-    /* border: solid 2px; */
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .logo-footer{
-    width: 200px;
-    height: auto;
-  }
-  
-  .copy-footer {
-    background-color: #b70003;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 6px;
-    margin: 0;
-  
-  }
-  
-  .p-copy-footer {
-    color: #fff;
-    font-family: "League Spartan", sans-serif;
-    font-size: 20px;
-    text-align: center;
-    margin: 0;
-  }
+// SCSS SECCIONES
+@import './sections/nav';
+@import './sections/variables';
+@import './sections/inicio';
+@import './sections/footer';
