--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,14 @@
 // SCSS UTILIDADES
 @import './utilities/reset';
 
+// MIXINS
+@import './utilities/mixins';
+
 // SCSS SECCIONES
 @import './sections/nav';
 @import './sections/variables';
 @import './sections/inicio';
 @import './sections/footer';
 @import './sections/contacto';
+@import './sections/postulate';
+@import './sections/mailing';
