--- a/scss/sections/_mailing.scss
+++ b/scss/sections/_mailing.scss
@@ -1,12 +1,167 @@
+.background-mailing{
+    background: url('https://media.discordapp.net/attachments/1228542950636781569/1232181570627174440/434601893_814535467370693_6833600161098087434_n.jpg?ex=6633bac3&is=66326943&hm=99f5916739763270d1969c77cca5f1025b359721b8e422e6ad67c06613a035c0&=&format=webp');
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .main-mailing{
     display: flex;
     justify-content: center;
     padding: 10px;
     margin-top: 20px;
-    border: solid 2px;
+    // border: solid 2px;
+    // border-bottom: solid 1px grey;
+    border-width: 0.2px;
 
     h1{
         font-size: 7.2rem;
         font-weight: 700;
+    }
+}
+
+.carousel-mailing{
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+
+    .h1-mailing{
+        width: 700px;
+
+        h1{
+            font-size: 4.2rem;
+            font-weight: 700;
+        }
+
+        p{
+            font-size: 1.3rem;
+            font-weight: 500;
+        }
+
+        .boton-imperdible{
+            height: 60px;
+            @include boton();
+        }
+    }
+
+    .draw-4{
+        position: absolute;
+        width: 500px;
+        left: 5rem;
+        bottom: 40px;
+        
+    }
+
+    .image-gallery-svg{
+        width: 32px;
+    }
+
+    .image-gallery-icon:hover{
+        color: rgb(164, 0, 0);
+    }
+
+    .image-gallery-thumbnails-container{
+        background-color: rgb(71, 21, 21);
+        box-shadow: 20px 5px 10px #000;
+    }
+
+    .image-gallery-thumbnail.active, .image-gallery-thumbnail:focus, .image-gallery-thumbnail:hover{
+        border: solid 4px red;
+    }
+
+    .image-gallery-icon:focus{
+        outline: red;
+    }
+}
+
+.svg-mailing{
+
+        position: absolute;
+        left: 0;
+        bottom: -4.2rem;
+        z-index: -1;
+}
+
+.section-ingresar-mailing{
+
+    position: relative;
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+    z-index: 1;
+
+
+    div{
+        margin-top: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        h1{
+            font-size: 5.2rem;
+            font-weight: 700;
+            text-align: center;
+        }
+    }
+
+    .link-mailing{
+        color: red;
+
+        &:hover{
+            color: rgb(186, 1, 1);
+        }
+    }
+}
+
+.cont-dudas-contacto-mailing{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.encabezado-dudas-mailing{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:  linear-gradient(rgba(0, 0, 0, 0.563), rgba(0, 0, 0, 0.601)), url('https://images.unsplash.com/photo-1516321165247-4aa89a48be28?q=80&w=2121&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover;
+    background-attachment: fixed;
+    height: 200px;
+    margin-bottom: 40px;
+
+    h1{
+        color: $c_blanco;
+        font-size: 7.2rem;
+        font-weight: 700;
+    }
+}
+
+.cont-contactarnos{
+    display: flex;
+    justify-content: space-around;
+    // align-items: center;
+}
+
+.contactarnos{
+    // border: solid 2px;
+    width: 800px;
+    margin-left: 50px;
+    h1{
+        font-size: 3.6rem;
+        font-weight: 700;
+    }
+
+    p{
+        font-size: 1.2rem;
+        font-weight: 500;
+        margin-bottom: 3.2rem;
+    }
+
+    button{
+        margin: 10px;
+        width: 250px;
+        @include boton();
     }
 }
